crates/knok/tests/ui/batched_matmul_shape.stderr
error: batched matmul batch dimensions must match, got 1 and 2
 --> tests/ui/batched_matmul_shape.rs:3:1
  |
3 | #[knok::graph(backend = "llvm-cpu")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/batched_matmul_shape.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
